--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/kevin/.local/share/virtualenvs/web_scraper-Pn2Y4aWq/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
